# behave-modern-md-report

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
behave_modern_md_report/: __init__.py  attach.py  collector.py  formatter.py  markdown.py  models.py  renderer.py  statistics.py  step_catalog_formatter.py  step_scanner.py  utils.py
docs/: architecture.md  attachments.md  ci-cd.md  configuration.md  contributing.md  customizing.md  examples.md  usage.md
examples/: report.md  step_catalog.md
examples/behave_project/: README.md  behave.ini  requirements.txt
examples/behave_project/features/: checkout.feature  environment.py  login.feature  reporting.feature
examples/behave_project/features/steps/: checkout_steps.py  login_steps.py  reporting_steps.py
examples/demo_generator/: README.md  generate_demo.py
tests/: __init__.py  test_collector.py  test_formatter.py  test_markdown.py  test_models.py  test_renderer.py  test_step_catalog.py
